# Physics-Simulations

./: LICENSE  ProjectileMotion.ipynb  README.md  requirements.txt
HarmonicOscillator/: .gitignore  README.md
HarmonicOscillator/docs/: HarmonicOscillator_Derivations.MD  HarmonicOscillator_Derivations.ipynb
HarmonicOscillator/notebooks/: HarmonicOscillator.ipynb
MonteCarloCEP/: README.md
MonteCarloCEP/notebooks/: MonteCarloCEP.ipynb
PIDConrollerSystems/docs/: Physics_Background.md
PIDControllerSystems/: README.md
PIDControllerSystems/docs/: Physics_Background.md
PIDControllerSystems/notebooks/: PIDControllerSystems.ipynb
ProjectileMotion/: Physics_Background.md  ProjectileMotion.html  ProjectileMotion.ipynb  README.md  pyproject.toml  run_simulation.py.py
ProjectileMotion/.ipynb_checkpoints/: ProjectileMotion-checkpoint.ipynb
ProjectileMotion/notebooks/: Demo.ipynb
ProjectileMotion/src/projectilemotion/: animation.py  physics.py  plotting.py  solvers.py  ui.py  validation.py
